@@ -1,4 +1,4 @@
-/* $Id: lsa.c,v 1.11 2004/06/17 09:07:12 ekohl Exp $
+/* $Id: lsa.c,v 1.12 2004/08/15 17:03:15 chorns Exp $
  *
  * COPYRIGHT:       See COPYING in the top level directory
  * PROJECT:         ReactOS system libraries
@@ -12,9 +12,7 @@
  *
  */
 
-#define NTOS_MODE_USER
-#include <ntos.h>
-#include <windows.h>
+#include "advapi32.h"
 #include <ntsecapi.h>
 
 #define NDEBUG
